website: fix mobile navbar color and z-index

--- a/docs/_sass/_figure.scss
+++ b/docs/_sass/_figure.scss
@@ -16,7 +16,7 @@ figure {
     position: absolute;
     bottom: 0;
     width: 100%;
-    z-index: 100;
+    z-index: 10;
     padding: 0.5vh;
     font-size: 0.9rem;
     font-family: var(--font-system);
