--- a/docs/_sass/_framing.scss
+++ b/docs/_sass/_framing.scss
@@ -117,9 +117,9 @@ html {
     margin: 1em;
   }
   nav .show ~ .menu {
-    // // background: var(--secondary-bg);
-    // background: red;
-    // // color: var(--secondary-bg-text);
+    // background: var(--secondary-bg);
+    background: red;
+    // color: var(--secondary-bg-text);
   }
   .posts {
     li { text-align: center;}
